# ops-lib-manifest

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
ops/manifests/: __init__.py  collector.py  exceptions.py  literals.py  manifest.py  manipulations.py
tests/: metadata.yaml
tests/data/mock_manifests/manifests/v0.2/: component-1.yaml  component-3.yaml
tests/data/mock_manifests/manifests/v0.3.1/: component-1.yaml  component-1.yml
tests/unit/: conftest.py  test_collector.py  test_manifests.py  test_manipulations.py  test_simple_manipulations.py
