[metadata]
name = ops.manifest
version = 1.1.0
author = Adam Dyess
author_email = adam.dyess@canonical.com
description = "Kubernetes manifests for Operators"
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = juju, charming, kubernetes, operators, manifests, yaml
license = Apache
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/canonical/ops-lib-manifest

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
install_requires =
    backports.cached-property
    ops
    lightkube

[options.packages.find]
include = ops.*